modified about page for potential client

--- a/about.html
+++ b/about.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        this is the about page
+        <h1>New Potential Client (we love you)</h1>
+
+        This is the About page
+
+        <!--This is the About page-->
     </body>
 <html>
